@@ -656,7 +656,7 @@ INTEGER_decode_uper(const asn_codec_ctx_t *opt_codec_ctx, asn_TYPE_descriptor_t 
 		int ret = 0;
 
 		/* Get the PER length */
-		len = uper_get_length(pd, -1, &repeat);
+		len = uper_get_length(pd, -1, 0, &repeat);
 		if(len < 0) ASN__DECODE_STARVED;
 
 		p = REALLOC(st->buf, st->size + len + 1);
