@@ -73,10 +73,10 @@ oer_decoder.h oer_decoder.c OPEN_TYPE.h # OER decoding support
 oer_encoder.h oer_encoder.c # OER encoding support
 oer_support.h oer_support.c # OER support
 OPEN_TYPE.h OPEN_TYPE_oer.c constr_CHOICE.h
-INTEGER_oer.c
+INTEGER_oer.c INTEGER.h
 OCTET_STRING_oer.c
-NativeInteger_oer.c
-NativeEnumerated_oer.c
+NativeInteger_oer.c NativeInteger.h
+NativeEnumerated_oer.c NativeEnumerated.h
 constr_SEQUENCE_oer.c constr_SEQUENCE.h
 constr_CHOICE_oer.c
 constr_SET_OF_oer.c constr_SET_OF.h asn_SET_OF.h asn_SET_OF.c
