@@ -43,11 +43,11 @@ typedef struct asn_bit_data_s asn_per_data_t;
     asn_get_many_bits(data, dst, align, bits)
 
 /*
+ * X.691 (08/2015) #11.9 "General rules for encoding a length determinant"
  * Get the length "n" from the Unaligned PER stream.
  */
-ssize_t uper_get_length(asn_per_data_t *pd,
-			int effective_bound_bits,
-			int *repeat);
+ssize_t uper_get_length(asn_per_data_t *pd, int effective_bound_bits,
+                        size_t lower_bound, int *repeat);
 
 /*
  * Get the normally small length "n".
@@ -74,6 +74,7 @@ int uper_put_constrained_whole_number_s(asn_per_outp_t *po, long v, int nbits);
 int uper_put_constrained_whole_number_u(asn_per_outp_t *po, unsigned long v, int nbits);
 
 /*
+ * X.691 (08/2015) #11.9 "General rules for encoding a length determinant"
  * Put the length "n" to the Unaligned PER stream.
  * This function returns the number of units which may be flushed
  * in the next units saving iteration.
